--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node scripts/migrate-to-neon.mjs"
   },
   "dependencies": {
-    "better-sqlite3": "^12.5.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "dotenv": "^17.2.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
