feat: enhance FilteredHeader logic and improve modal styles

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "node scripts/migrate-to-neon.mjs"
+    "migrate": "node scripts/migrate-to-neon.mjs",
+    "seed": "node scripts/seed.mjs"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
