feat: integrate Prisma with PostgreSQL and seed initial data

--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "deep-dive",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "migrate": "node scripts/migrate-to-neon.mjs",
-    "seed": "node scripts/seed.mjs"
+    "seed": "npx prisma db seed",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@prisma/client": "^6.2.1",
+    "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "next": "14.1.0",
     "react": "^18",
@@ -19,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "25.0.3",
-    "@types/react": "19.2.7"
+    "@types/react": "19.2.7",
+    "prisma": "^6.2.1"
   }
 }
